// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas sobre el componente GifExpertApp debe coincidir con el snap 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`pruebas sobre el componente GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Star Wars"
      key="Star Wars"
    />
    <GifGrid
      category="Han Solo"
      key="Han Solo"
    />
  </ol>
</Fragment>
`;
